tests/baselines/reference/importTypeLocal.errors.txt
foo2.ts(16,5): error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
usage.ts(5,5): error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.


==== foo.ts (0 errors) ====
    interface Point {
        x: number;
        y: number;
    }
    export = Point;
    
==== foo2.ts (1 errors) ====
    namespace Bar {
        export interface I {
            a: string;
            b: number;
        }
    }
    
    export namespace Baz {
        export interface J {
            a: number;
            b: string;
        }
    }
    
    class Bar {
        item: Bar.I;
        ~~~~
!!! error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
        constructor(input: Baz.J) {}
    }
    export { Bar }
    
==== usage.ts (1 errors) ====
    export const x: import("./foo") = { x: 0, y: 0 };
    export let y: import("./foo2").Bar.I = { a: "", b: 0 };
    
    export class Bar2 {
        item: {a: string, b: number, c: object};
        ~~~~
!!! error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
        constructor(input?: any) {}
    }
    
    export let shim: typeof import("./foo2") = {
        Bar: Bar2
    };
    